--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.mu.popbl.haip</groupId>
-        <artifactId>haip-desktop</artifactId>
-        <version>1.0-ALFA</version>
-    </parent>
+	<parent>
+		<groupId>com.mu.popbl.haip</groupId>
+		<artifactId>haip-desktop</artifactId>
+		<version>1.0-ALFA</version>
+	</parent>
 
-    <artifactId>lib</artifactId>
-    <version>1.0-ALFA</version>
+	<artifactId>lib</artifactId>
+	<version>1.0-ALFA</version>
 
-    <dependencies>
+	<dependencies>
 
-        <!-- https://mvnrepository.com/artifact/org.scream3r/jssc -->
-        <dependency>
-            <groupId>org.scream3r</groupId>
-            <artifactId>jssc</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.scream3r/jssc -->
+		<dependency>
+			<groupId>org.scream3r</groupId>
+			<artifactId>jssc</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
 
 </project>
