--- a/control/pom.xml
+++ b/control/pom.xml
@@ -14,11 +14,28 @@
     <version>1.0-ALFA</version>
 
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.mu.popbl.haip</groupId>
             <artifactId>lib</artifactId>
             <version>1.0-ALFA</version>
         </dependency>
+
     </dependencies>
 
 </project>
