--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -14,6 +14,14 @@
 
 	<dependencies>
 
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.scream3r/jssc -->
 		<dependency>
 			<groupId>org.scream3r</groupId>
@@ -21,12 +29,10 @@
 			<version>2.8.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
+			<groupId>com.mu.popbl.haip</groupId>
+			<artifactId>control</artifactId>
+			<version>1.0-ALFA</version>
 		</dependency>
 
 	</dependencies>
