Enabled log for ships. Ship action button is disabled until boat has been discovered. Icons are now got form Font Awesome icon pack Deleted old icons

--- a/control/pom.xml
+++ b/control/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.mu.popbl.haip</groupId>
+            <artifactId>lib</artifactId>
+            <version>1.0-ALFA</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
@@ -31,9 +37,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mu.popbl.haip</groupId>
-            <artifactId>lib</artifactId>
-            <version>1.0-ALFA</version>
+            <groupId>com.github.jiconfont</groupId>
+            <artifactId>jiconfont-swing</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.jiconfont</groupId>
+            <artifactId>jiconfont-font_awesome</artifactId>
+            <version>4.7.0.0</version>
         </dependency>
 
     </dependencies>
