--- a/ship/pom.xml
+++ b/ship/pom.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.mu.popbl.haip</groupId>
-		<artifactId>haip-desktop</artifactId>
-		<version>1.0-ALFA</version>
-	</parent>
+    <parent>
+        <groupId>com.mu.popbl.haip</groupId>
+        <artifactId>haip-desktop</artifactId>
+        <version>1.0-ALFA</version>
+    </parent>
 
-	<artifactId>ship</artifactId>
-	<version>1.0-ALFA</version>
+    <artifactId>ship</artifactId>
+    <version>1.0-ALFA</version>
 
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>com.mu.popbl.haip</groupId>
-			<artifactId>lib</artifactId>
-			<version>1.0-ALFA</version>
-		</dependency>
+        <dependency>
+            <groupId>com.mu.popbl.haip</groupId>
+            <artifactId>lib</artifactId>
+            <version>1.0-ALFA</version>
+        </dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
-		<dependency>
-			<groupId>org.imgscalr</groupId>
-			<artifactId>imgscalr-lib</artifactId>
-			<version>4.2</version>
-		</dependency>
+        <!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.github.jiconfont</groupId>
-			<artifactId>jiconfont-swing</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.github.jiconfont</groupId>
+            <artifactId>jiconfont-swing</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.github.jiconfont</groupId>
-			<artifactId>jiconfont-font_awesome</artifactId>
-			<version>4.7.0.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.github.jiconfont</groupId>
+            <artifactId>jiconfont-font_awesome</artifactId>
+            <version>4.7.0.0</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 </project>
